--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,6 @@ MYSQL_DB=db
 # mysql port
 MYSQL_PORT=3306
 # mysql cloud login info - POPULATE WITH YOUR OWN VALUES!
-MYSQL_CLOUD_USER=
-MYSQL_CLOUD_PASS=
-MYSQL_CLOUD_HOST=
+MYSQL_CLOUD_USER=root
+MYSQL_CLOUD_PASS=password
+MYSQL_CLOUD_HOST=db-gui-lab.c3vunk7sdiif.us-east-2.rds.amazonaws.com
