--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
