--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.0",
     "react-router-dom": "^6.0.0",
